# Gif-Engine

./: .gitignore  Cargo.toml  README.md  repro.rs
.github/workflows/: rust.yml
src/: main.rs  types.rs
src/app/: dirs.rs  mod.rs  process.rs  store.rs
src/cache/: frame_buffer.rs  memory_pool.rs  mod.rs
src/decoder/: apng.rs  gif.rs  mod.rs
src/gui/: mod.rs
src/platform/: mod.rs  windows.rs
src/playback/: player.rs
src/renderer/: mod.rs  painter.rs  window.rs
src/tui/: menu.rs  mod.rs  process.rs  store.rs
