[package]
name = "gif-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
image = "0.24"
gif = "0.12"
png = "0.17"
winit = "0.29"
softbuffer = "0.4"
dialoguer = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console = "0.15"
sysinfo = "0.38.0"
tray-icon = "0.21.3"
menu_rs = "0.3.1"
eframe = "0.27"
egui = "0.27"
rfd = "0.14"
auto-launch = "0.5"


[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Foundation"
]}

